feat: finishing up the code
